static/css/theme.css
@media (prefers-color-scheme: dark) {
  html {
    background: #282828;
    color: #fff;
  }
}

body {
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue","Segoe UI","Roboto",sans-serif;
  font-size: 16px;
  font-size: calc(0.8rem + 0.25vw);
  font-weight: 400;
  line-height: 1.65;
  color: #282828;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body, blockquote, figure {
  margin: 0;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 400;
}

b, strong, th {
  font-weight: 500;
}

a {
  color: inherit;
  text-decoration: inherit;
  transition: color .2s;
}

a:hover, header time {
  color: #949494;
}

article a {
  color: #68f;
}

article header a, article footer a {
  color: inherit;
}

hr {
  border: 1px solid #9494944d;
  margin: 2em 0;
}

blockquote {
  background: #9494940f;
  border-left: 4px solid #68f;
  padding: 1px 1.5em;
}

img {
  border-radius: 2px;
  max-width: 100%;
  height: auto;
  margin: .5em 0;
}

table {
  width: 100%;
  border-collapse: collapse;
}

tr:hover, tr:nth-child(odd) td {
  background: #94949410;
}

th, td {
  border: 1px solid #94949436;
  padding: .5em 1em;
}

pre {
  background: #94949422;
  border-radius: 2px;
  font-size: .8em;
  margin: 1.5em 0;
  padding: .8em 1.2em;
  overflow-x: auto;
}

p code {
  font-size: .9em;
  background: #94949426;
  opacity: .75;
  border-radius: 2px;
  margin: 0 .1em;
  padding: .2em .4em;
}

body > header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

header h1 {
  font-size: 1.7em;
  margin: 0;
}

nav {
  margin: .5em -.8em;
}

nav a {
  margin: 0 .8em;
}

body > header, article {
  padding: 1.5em 1em;
}

@media (min-width: 40em) {
  body > header, article {
    padding: 1.5em calc(34% - 12rem);
  }
}

